# boost-file-storage

./: .gitignore  README.md
BoostFileStorage/: BoostFileStorage.sln  CMakeLists.txt
BoostFileStorage/client/: AddressChooserDialog.cpp  AddressChooserDialog.h  CMakeLists.txt  ConnectionEvent.cpp  ConnectionEvent.h  FileProcessEvent.cpp  FileProcessEvent.h  FileStorageApp.cpp  FileStorageApp.h  FileStorageFrame.cpp  FileStorageFrame.h  IpValidator.cpp  IpValidator.h  LogMessagesGenerator.cpp  LogMessagesGenerator.h  Main.cpp  PortValidator.cpp  PortValidator.h  StatusBarUpdateEvent.cpp  StatusBarUpdateEvent.h  TextCtrlValidator.cpp  TextCtrlValidator.h  client.vcxproj  client.vcxproj.filters
BoostFileStorage/common/: CMakeLists.txt  client_socket.cpp  client_socket.h  common.vcxproj  common.vcxproj.filters  console_logger.cpp  console_logger.h  logger.h  server_socket.cpp  server_socket.h  socket.cpp  socket.h  socket_message.cpp  socket_message.h  socket_state.h
BoostFileStorage/server/: CMakeLists.txt  checked_logger.cpp  checked_logger.h  message_handlers.cpp  message_handlers.h  server.cpp  server.h  server.vcxproj  server.vcxproj.filters
BoostFileStorage/service/: BoostFileStorageEventProvider.h  BoostFileStorageEventProvider.mc  CMakeLists.txt  Main.cpp  Service.cpp  Service.h  ServiceArguments.cpp  ServiceArguments.h  ServiceLogger.cpp  ServiceLogger.h  service.vcxproj  service.vcxproj.filters
